# argus-rs

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: INTEGRATION_FAILURE.md
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  QUESTION-FORM.yml  config.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
